fazendo testes passarem e script de build funcionar com sbt